完善时间线、修改密码、加入活动等

--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -50,7 +50,7 @@
 
 		<div class="show-desc">
 			<div class="show-desc-right">
-				<div class="ac-end-no">加入</div>
+				<div id="activity_detail_join" class="ac-end-join">加入</div>
 				<p style="font-size: 12px !important;">剩余名额{{courseInfo.surplustCount}}人</p>
 			</div>
 			<div class="show-desc-left">
@@ -96,12 +96,11 @@
   	var webview_every_one_works = null // 大家作品
   	var webview_activity_reply_detail = null // 活动集锦
   	var activityId=0;
-  	var vm = new Vue({
+  	var vm_activity_detail = new Vue({
 		el: '#actiity-detail-content',
 		data: {
 			courseInfo:{ 
-		    }
-			,classList:[ ]
+		   } 
 				
 		} 
 	});
@@ -115,7 +114,7 @@
 		console.info("activityId:  "+activityId);
 		app.getActivityDetail(activityId,function(data){
 			if(data.code==0){
-				vm.courseInfo=data.object; 
+				vm_activity_detail.courseInfo=data.object; 
 				//vm.classList =  data.objectList;
 			}
 			mui.toast(data.msg);
@@ -173,6 +172,13 @@
 			//console.info("this.href:  " + this.href);
 			 open_activity_reply_detail();
 		}); 
+		
+		mui('#actiity-detail-content').on('tap','#activity_detail_join',function(){
+			//console.info("this.href:  " + this.href);
+			 post_activity_detail_join();
+		}); 
+		
+		
 	})
 	
 	/**
@@ -203,6 +209,32 @@
 		},150);
 	}
 	
+	function post_activity_detail_join(){
+		var userInfo = app.getState();
+		var data={};
+		console.info(JSON.stringify(vm_activity_detail.courseInfo));
+		data={
+				manageId:userInfo.manageId,
+				actionType:'',//  加入：join；  退出：signout
+				asActId:vm_activity_detail.courseInfo.actId,
+				asGradeId:userInfo.studentsDetail.stdGrade,
+				asClassId:userInfo.studentsDetail.stdClass,
+				asTcId:vm_activity_detail.courseInfo.actTcId
+			}
+		if(vm_activity_detail.courseInfo.asId==undefined || vm_activity_detail.courseInfo.asId==0 ){
+			data.actionType="join";
+		}else{
+			data.actionType="signout" ;
+		}
+		
+		app.postActivityDetailJoin(data,function(data){
+			if(data.code==0){
+			}
+			mui.toast(data.msg);
+		});
+		 
+	}
+	 
 </script>
 </body>
 </html>
