--- a/school/selectCourse.html
+++ b/school/selectCourse.html
@@ -147,7 +147,7 @@
 		if(classInfo.hasJoin==0){
 			data={
 				manageId:userInfo.manageId,
-				actionType:'join',//  加入：join；  退出：signout
+				actionType:"join",//  加入：join；  退出：signout
 				tsRcId:vm.courseInfo.rcId,
 				tsTcId:classInfo.tcId,
 				tsTmId:classInfo.tcTmId,
@@ -156,7 +156,7 @@
 		}else{
 			data={
 				manageId:userInfo.manageId,
-				actionType:'signout', //  加入：join；  退出：signout
+				actionType:"signout", //  加入：join；  退出：signout
 				tsId:classInfo.tcId 
 			}
 		}
