--- a/school/setPassword.html
+++ b/school/setPassword.html
@@ -49,12 +49,19 @@
 <script type="text/javascript" src="../js/mui.poppicker.js" ></script>
 <script type="text/javascript" charset="UTF-8">
 
+	mui.init();
+	 
   	(function($,doc){
   		$.init();
   		$.ready(function(){
 
   		});
   	})(mui,document);
+  	
+  	//重写返回逻辑
+	mui.back = function() {
+		plus.webview.currentWebview().hide("auto", 300);
+	}
 </script>
 </body>
 </html>
