--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -21,12 +21,12 @@
 		<a href="#" id="personal_center_set_link" class="mui-icon mui-icon-compose mui-pull-right"></a>
 		<img src="../images/school/head-btm.png" class="head-pic-btm">
 		<img src="../images/school/ct-dianzhui.png" class="dz-icon">
-
-		<img src="../images/school/head-pic.png" class="head-pic">
+		
+		<img :src="headPic" class="head-pic">
 		<p class="user-name">{{userInfo.realName}}</p>
-		<div v-if="userInfo.roleType==3" >
+		<div v-if="userInfo.roleType==3">
 			<p class="class-name">{{userInfo.studentsDetail.stdGradeName}}{{userInfo.studentsDetail.stdClassName}}</p>
-			<p class="school-name">{{userInfo.studentsDetail.stdSchoolName}}</p> 
+			<p class="school-name">{{userInfo.studentsDetail.showSchoolName}}</p> 
 		</div>
 		<div v-if="userInfo.roleType==2">
 			<p class="class-name">{{thGenderName}}</p>
@@ -107,7 +107,7 @@
 						stdGender:'M',
 						stdGradeName:'1年级',
 						stdClassName:'2班',
-						stdSchoolName:'学多多学校',
+						showSchoolName:'学多多学校',
 						}
 				}
 			},
@@ -118,6 +118,14 @@
 			    },
 			    stdGenderName: function () { 
 			      return this.userInfo.studentsDetail.stdGender=='M'?'男':'女';
+			    },
+			    headPic:function(){
+			    	var pic='../images/school/head-pic.png';
+			    	if(this.userInfo.roleType==3 && this.userInfo.studentsDetail.stdPic!=undefined && this.userInfo.studentsDetail.stdPic!=''){
+			    		pic=this.userInfo.studentsDetail.stdPic;
+			    	}
+			    	//else if(this.userInfo.roleType==3 && this.userInfo.teacherDetail)
+			    	return pic;
 			    }
 			  }
 		}); 
