--- a/school/setTeacherfo.html
+++ b/school/setTeacherfo.html
@@ -6,6 +6,8 @@
     <title>修改老师信息</title>
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/mui.min.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/vue.min.js"></script>
     <link href="../css/mui.css" rel="stylesheet"/>
 	<link href="../css/app.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/mui.picker.min.css" />
@@ -15,9 +17,11 @@
 	<link href="../css/school/setMsgInfo.css" rel="stylesheet"/>
 </head>
 <body>
+	
+	<div id="teacher_info_content">
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		<a class="mui-pull-right setPwd"> 修改密码 </a>
+		<a id="modify_password" class="mui-pull-right setPwd"> 修改密码 </a>
 		<img src="../images/head-dz.png" class="head-dz"/>
 		<h1 class="mui-title">修改老师信息</h1>
 	</header>
@@ -57,10 +61,15 @@
 			<button  type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">确定</button>
 		</div>
 	</div>
+	</div> 
 <script type="text/javascript" src="../js/mui.picker.js" ></script>
 <script type="text/javascript" src="../js/mui.poppicker.js" ></script>
+<script type="text/javascript" src="../js/common.js" ></script>
 <script type="text/javascript" charset="UTF-8">
+	mui.init();
 
+	var webview_set_password = null;
+	
   	(function($,doc){
   		$.init();
   		$.ready(function(){
@@ -71,7 +80,33 @@
   	document.getElementById('headImage').addEventListener('tap', function() { 
      	cameraAndAlbum('修改用户头像',1);
      });
-  	
+     
+     
+  	mui.plusReady(function(){
+  			webview_set_password = mui.preload({
+				url: 'setPassword.html',
+				id: 'set_password',
+				styles: {
+					"render": "always",
+					"popGesture": "hide",
+					"bounce": "vertical" 
+				}
+			});
+			
+			
+  		mui('#student_info_content').on('tap', '#modify_password', function(e) {
+			  mui.fire(webview_set_password, 'get_set_teacher', {
+					//userInfo: userInfo
+				});	 
+				setTimeout(function () {
+						webview_set_password.show("slide-in-right", 300);
+				},150);
+			});
+  	})
+  	//重写返回逻辑
+	mui.back = function() {
+		plus.webview.currentWebview().hide("auto", 300);
+	}
 </script>
 </body>
 </html>
