--- a/school/courseExperience.html
+++ b/school/courseExperience.html
@@ -6,6 +6,8 @@
     <title>学习体会</title>
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/mui.min.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/vue.min.js"></script>
     <link href="../css/mui.css" rel="stylesheet"/>
 	<link href="../css/app.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/mui.picker.min.css" />
@@ -13,6 +15,7 @@
 	<link href="../css/dashboard.css" rel="stylesheet"/>
 	<link href="../css/top.css" rel="stylesheet"/>
 	<link href="../css/school/myWorks.css" rel="stylesheet"/>
+	<link href="../css/H5MediaFile.css" rel="stylesheet"/>
 </head>
 <body>
 	<div  id="course_experience_content" >
@@ -23,6 +26,16 @@
 	</header>
 	<div class="mui-content">
 
+		<form > 
+			<div class="out-div">
+				<label class="label-desc-cg">学习体会 </label>
+				<textarea id="textarea" v-model="experienceInfo.cceDesc" rows="3" placeholder="请输入学习体会" class="text-content"></textarea>
+			</div> 
+		
+			<ul id="history" class="dlist" style="text-align:left;padding:0;">
+
+			</ul>
+		
 		<div class="button buttonContianer">
 			<div class="button button1"></div>
 			<div class="button button2"></div>
@@ -31,20 +44,31 @@
 		</div>
 		<div class="div-tips">附件上限为10个。</div>
  
-		<form > 
-			<div class="out-div">
-				<label class="label-desc-cg">学习体会 </label>
-				<textarea id="textarea" v-model="experienceInfo.cceDesc" rows="3" placeholder="请输入学习体会" class="text-content"></textarea>
-			</div> 
 		</form> 
 	</div>
 
 	<button id="btn_course_exprience_post" type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn"> 保 存 </button>
+	
+	<div id="play" class="rp">
+		<div id="ptime" class="ptime">00:00:00/00:00:00</div><br/>
+		<div id="progress" class="progress"><div id="schedule" class="schedule"></div></div>
+		<br/>
+		<div class="stop" onclick="stopPlay()"></div>
+	</div>
+	<div id="record" class="rp">
+		<div style="width:100%;height:20%;"></div>
+		<div class="rprogress"><div class="rschedule"></div></div>
+		<br/>
+		<div id="rtime" class="rtime">00:00:00</div><br/>
+		<div class="stop" onclick="stopRecord()"></div>
+	</div>
+
 </div>
 <script type="text/javascript" src="../js/mui.picker.js" ></script>
 <script type="text/javascript" src="../js/mui.poppicker.js" ></script>
-	<script src="../js/app.js"></script>
-	<script src="../js/vue.min.js"></script>
+<script type="text/javascript" src="../js/H5Plus.js" ></script>
+<script type="text/javascript" src="../js/common.js" ></script>
+<script type="text/javascript" src="../js/immersed.js" ></script>
 <script type="text/javascript" charset="UTF-8">
     mui.init();
     var count = 0
