--- a/school/setPassword.html
+++ b/school/setPassword.html
@@ -6,6 +6,8 @@
     <title>修改密码</title>
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/mui.min.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/vue.min.js"></script>
     <link href="../css/mui.css" rel="stylesheet"/>
 	<link href="../css/app.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/mui.picker.min.css" />
@@ -15,6 +17,7 @@
 	<link href="../css/school/setMsgInfo.css" rel="stylesheet"/>
 </head>
 <body>
+<div id="set_password_content">
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<img src="../images/head-dz.png" class="head-dz"/>
@@ -25,26 +28,27 @@
 
 			<div class="mui-input-row">
 				<label>旧密码 <span style="color:red;"> *</span></label>
-				<input type="password" class="mui-input-password password" placeholder="旧密码"/>
+				<input type="password" v-model="loginInfo.loginPasswordOld" class="mui-input-password password" placeholder="旧密码"/>
 			</div>
 
 
 			<div class="mui-input-row">
 				<label>新密码 <span style="color:red;"> *</span></label>
-				<input type="password" class="mui-input-password password" placeholder="新密码"/>
+				<input type="password" v-model="loginInfo.loginPassword" class="mui-input-password password" placeholder="新密码"/>
 			</div>
 
 			<div class="mui-input-row">
-				<label>新密码 <span style="color:red;"> *</span></label>
-				<input type="password" class="mui-input-password password" placeholder="再次输入新密码"/>
+				<label>确认新密码 <span style="color:red;"> *</span></label>
+				<input type="password" v-model="loginInfo.loginPasswordCheck" class="mui-input-password password" placeholder="再次输入新密码"/>
 			</div>
 
 
 		</form>
 		<div style="padding:32px;background-color:#F7F7F7;">
-			<button  type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">确定</button>
+			<button id="btn_set_password_post" type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">确定</button>
 		</div>
 	</div>
+</div>
 <script type="text/javascript" src="../js/mui.picker.js" ></script>
 <script type="text/javascript" src="../js/mui.poppicker.js" ></script>
 <script type="text/javascript" charset="UTF-8">
@@ -57,6 +61,41 @@
 
   		});
   	})(mui,document);
+  	 
+  	var vm_set_password = new Vue({
+		el: '#set_password_content',
+		data: {
+			loginInfo:{
+				manageId:0,
+				loginName:'',
+				loginPassword:'',
+				loginPasswordCheck:'',
+				loginPasswordOld:''
+			}
+		}
+	});
+  	
+  	mui.plusReady(function(){ 
+		
+		mui('#set_password_content').on('tap', '#btn_set_password_post', function(e) {
+		  post_set_password();
+		});
+  	})
+  	function post_set_password(){ 
+			var data={};
+			data=vm_set_password.loginInfo;			
+			var userInfo = app.getState(); 
+			data.manageId=userInfo.manageId 
+			console.info(JSON.stringify(data));
+			app.postModifyPassword(data,function(data){
+				if(data.code==0){
+					mui.back();
+				}
+				mui.toast(data.msg);
+			});
+			 
+  	}
+  	
   	
   	//重写返回逻辑
 	mui.back = function() {
