去除无用静态测试数据，初始化课程、活动、成果等界面。

--- a/school/activityReply.html
+++ b/school/activityReply.html
@@ -99,13 +99,13 @@
 		data: {
 			commentInfo:{
 				ahStudentId:0,//  学生id／教师ID
-				ahDesc:'123123',//  活动集锦   必填
+				ahDesc:'',//  活动集锦   必填
 				ahStudentName:'',//  学生姓名
 				ahActId:'',//  与t_activity表的act_id关联 必填
 				ahSponsorType:'',//  活动发起者类型：1：学生；2：教师
 				activityHighlightsFilesList:[]  //活动集锦附件
 			},
-			activityInfo:{actName:'ddd'}
+			activityInfo:{actName:''}
 		}
 	});
 	 
