--- a/school/rankingList.html
+++ b/school/rankingList.html
@@ -112,18 +112,18 @@
 				data: {
 					showType:2,
 					studentRanking:[
-					 {showActName:'123a',showActTime:'2017-08-08'}
-					,{showActName:'123b',showActTime:'2017-08-08'}
-					,{showActName:'123c',showActTime:'2017-08-08'}
-					,{showActName:'123d',showActTime:'2017-08-08'}
-					,{showActName:'123e',showActTime:'2017-08-08'}
+//					 {showActName:'123a',showActTime:'2017-08-08'}
+//					,{showActName:'123b',showActTime:'2017-08-08'}
+//					,{showActName:'123c',showActTime:'2017-08-08'}
+//					,{showActName:'123d',showActTime:'2017-08-08'}
+//					,{showActName:'123e',showActTime:'2017-08-08'}
 					],
 					activityRanking:[
-					 {actName:'456',showTotalPointNum:78}
-					,{actName:'456a',showTotalPointNum:79}
-					,{actName:'456b',showTotalPointNum:789}
-					,{actName:'456c',showTotalPointNum:72}
-					,{actName:'456d',showTotalPointNum:738}
+//					 {actName:'456',showTotalPointNum:78}
+//					,{actName:'456a',showTotalPointNum:79}
+//					,{actName:'456b',showTotalPointNum:789}
+//					,{actName:'456c',showTotalPointNum:72}
+//					,{actName:'456d',showTotalPointNum:738}
 					]
 				} 
 			});
