--- a/school/selectCourse.html
+++ b/school/selectCourse.html
@@ -67,40 +67,42 @@
 		el: '.mui-content',
 		data: {
 			courseInfo:{
-		        "rcId": 2,
-		        "rcCode": "2000001",
-		        "rcName": "warking，上海 测试",
-		        "rcTime": "2017-07-11 09:01:05",
-		        "rcDesc": "啊但是发生地方",
-		        "rcPeriod": 19,
-		        "rcClassForm": "走班制",
-		        "rcOperId": 3,
-		        "deleteFalg": 0,
-		        "deleteTime": 1499742828000,
-		        "rcLogo":" "
+//		        "rcId": 2,
+//		        "rcCode": "2000001",
+//		        "rcName": "warking，上海 测试",
+//		        "rcTime": "2017-07-11 09:01:05",
+//		        "rcDesc": "啊但是发生地方",
+//		        "rcPeriod": 19,
+//		        "rcClassForm": "走班制",
+//		        "rcOperId": 3,
+//		        "deleteFalg": 0,
+//		        "deleteTime": 1499742828000,
+//		        "rcLogo":" "
 		    }
-			,classList:[{
-						"tcId": 1,
-						"tcName": "A班",
-						"tcRcId": 2,
-						"tcSchoolId": 1,
-						"tcTime": "2017-07-15 17:17:36",
-						"tcUpdateTime": "2017-07-17 17:19:43",
-						"tcUpdateUser": "dev",
-						"tcAddress": "阿斯顿发生地方",
-						"tcTeacherId": 7,
-						"tcTeacherName": "李四",
-						"tcOperId": 40,
-						"tcOperName": "dev",
-						"tcNums": 18,
-						"tcTmId": 1,
-						"tcApplicantsNums": 5,
-						"deleteFalg": 0,
-						"deleteTime": 1500283184000,
-						"tcStartTime": 1500739200000,
-						"tcEndTime": 1506614400000,
-						"hasJoin": "0"
-						}]
+			,classList:[
+//			{
+//						"tcId": 1,
+//						"tcName": "A班",
+//						"tcRcId": 2,
+//						"tcSchoolId": 1,
+//						"tcTime": "2017-07-15 17:17:36",
+//						"tcUpdateTime": "2017-07-17 17:19:43",
+//						"tcUpdateUser": "dev",
+//						"tcAddress": "阿斯顿发生地方",
+//						"tcTeacherId": 7,
+//						"tcTeacherName": "李四",
+//						"tcOperId": 40,
+//						"tcOperName": "dev",
+//						"tcNums": 18,
+//						"tcTmId": 1,
+//						"tcApplicantsNums": 5,
+//						"deleteFalg": 0,
+//						"deleteTime": 1500283184000,
+//						"tcStartTime": 1500739200000,
+//						"tcEndTime": 1506614400000,
+//						"hasJoin": "0"
+//						}
+			]
 				
 		} 
 	});
