--- a/school/setTeacherfo.html
+++ b/school/setTeacherfo.html
@@ -76,11 +76,11 @@
 		el: '#teacher_info_content',
 		data: {
 			teacherInfo:{
-				thName:'李四',
-				thPhs:'1393223333',
+//				thName:'李四',
+//				thPhs:'1393223333',
 		 		thGender:'M',
-		 		thAddress:'XXaddress',
-				thPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
+//		 		thAddress:'XXaddress',
+//				thPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
 			}
 		},
 		computed: {
