--- a/school/timeline.html
+++ b/school/timeline.html
@@ -43,14 +43,14 @@
 		el: '#time-line-content',
 		data: {
 			timeLineList:[ 
-			{
-	           "showActName": "外滩行活动",
-	           "showActTime": "2017-08-12"
-	        },
-	        {
-	           "showActName": "外滩行活动",
-	           "showActTime": "2017-08-12"
-	        }
+//			{
+//	           "showActName": "外滩行活动",
+//	           "showActTime": "2017-08-12"
+//	        },
+//	        {
+//	           "showActName": "外滩行活动",
+//	           "showActTime": "2017-08-12"
+//	        }
 			]
 		} 
 	});
