--- a/school/personalCenter.html
+++ b/school/personalCenter.html
@@ -102,15 +102,15 @@
 					roleType:3,
 					realName:'姓名',
 					teacherDetail:{
-						thGender:'M',
-						thPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
+//						thGender:'M',
+//						thPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
 					},
 					studentsDetail:{
-						stdGender:'M',
-						stdGradeName:'1年级',
-						stdClassName:'2班',
-						showSchoolName:'学多多学校',
-						stdPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
+//						stdGender:'M',
+//						stdGradeName:'1年级',
+//						stdClassName:'2班',
+//						showSchoolName:'学多多学校',
+//						stdPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
 						}
 				}
 			},
