--- a/school/setStudentInfo.html
+++ b/school/setStudentInfo.html
@@ -91,11 +91,11 @@
 		data: {
 			studentInfo:{
 				 stdGender:'M',
-				 stdRealName:'测试200',
-				stdGradeName:'1年级',
-				stdClassName:'2班',
-				stdAddress:'XX路XX弄',
-				stdPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
+//				 stdRealName:'测试200',
+//				stdGradeName:'1年级',
+//				stdClassName:'2班',
+//				stdAddress:'XX路XX弄',
+//				stdPic:'http://112.124.110.182:11008/upload/SchoolPicture/20170812/B20170812184009_b00db04f8f8b4dcf9d4a804ecff7a6b5.png'
 			}
 		},
 		computed: {
