--- a/school/setStudentInfo.html
+++ b/school/setStudentInfo.html
@@ -28,7 +28,7 @@
 	<div class="mui-content">
 		<form class="mui-input-group">
 			<div class="head-div">
-				<img  :src="headPic" class="head-pic" id="headImage">
+				<img  :src="headPic" @tap="setStudentHeadImage()" class="head-pic" id="headImage">
 				<p style="font-size: 12px !important;margin-bottom: 12px;opacity: .5;">点击图片，上传新头像。</p>
 			</div>
 
@@ -75,12 +75,12 @@
 	var webview_set_password = null;
 	
 	
-  	(function($,doc){
-  		$.init();
-  		$.ready(function(){
-
-  		});
-  	})(mui,document);
+//	(function($,doc){
+//		$.init();
+//		$.ready(function(){
+//
+//		});
+//	})(mui,document);
   	
   	 document.getElementById('headImage').addEventListener('tap', function() { 
      	cameraAndAlbum('修改用户头像',1);
@@ -161,6 +161,10 @@
 			});
 			 
   	}
+  	
+  	function setStudentHeadImage() {
+     	cameraAndAlbum('修改用户头像',1);
+     }
   	
   	//重写返回逻辑
 	mui.back = function() {
