--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -26,7 +26,7 @@
 		<a id="activity_reply_detail" href="#"  class="mui-pull-right top-edit" style="left:50px; right:250px">活动集锦</a>
 	</header>
 
-	<nav id="main_bar" class="mui-bar mui-bar-tab">
+	<!--<nav id="main_bar" class="mui-bar mui-bar-tab">
 		<a class="mui-tab-item" href="courseAll.html">
 			<span class="mui-icon tabbar-ns-1 foot-icon"></span>
 			<span class="mui-tab-label">课程</span>
@@ -43,14 +43,15 @@
 			<span class="mui-icon tabbar-ns-4 foot-icon"></span>
 			<span class="mui-tab-label">我的</span>
 		</a>
-	</nav>
+	</nav>-->
 	 
  
 	<div class="mui-content">
 
 		<div class="show-desc">
 			<div class="show-desc-right">
-				<div id="activity_detail_join" class="ac-end-join">加入</div>
+				<div v-if="courseInfo.hasPart==1" id="activity_detail_quit" class="ac-end-quit">退出</div>
+				<div v-else  id="activity_detail_join" class="ac-end-join">加入</div>
 				<p style="font-size: 12px !important;">剩余名额{{courseInfo.surplustCount}}人</p>
 			</div>
 			<div class="show-desc-left">
@@ -84,7 +85,7 @@
 
 		</div>
 		<div style="padding:32px;background-color:#F7F7F7;">
-			<button id="btn_activity_my_works" type="button" 
+			<button  v-if="courseInfo.hasPart==1"  id="btn_activity_my_works" type="button" 
 				class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">我的作品</button>
 			<button v-if="userInfo.roleType==2" id="btn_activity_my_works_show" type="button" 
 				class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">推荐学校秀</button>
@@ -148,11 +149,11 @@
 		},false);
 		 
 		 
-	    mui('#main_bar').on('tap', 'a', function(e) {
-		    //获取目标子页的id
-		    var targetTab = this.getAttribute('href');
-		    window.location.href=targetTab;
-		});
+//	    mui('#main_bar').on('tap', 'a', function(e) {
+//		    //获取目标子页的id
+//		    var targetTab = this.getAttribute('href');
+//		    window.location.href=targetTab;
+//		});
 		
 		webview_every_one_works = mui.preload({
 			url: 'everyoneWorks.html',
@@ -204,6 +205,11 @@
 			//console.info("this.href:  " + this.href);
 			 post_activity_detail_join();
 		}); 
+		mui('#actiity-detail-content').on('tap','#activity_detail_quit',function(){
+			//console.info("this.href:  " + this.href);
+			 post_activity_detail_join();
+		}); 
+		
 		
 		
 	})
@@ -253,22 +259,22 @@
 		mui.toast("推荐学校秀！");
 	}
 	
-	function post_activity_detail_join(){
+	function post_activity_detail_join(type){
 		var userInfo = app.getState();
 		var data={};
 		console.info(JSON.stringify(vm_activity_detail.courseInfo));
 		data={
 				manageId:userInfo.manageId,
-				actionType:'',//  加入：join；  退出：signout
+				actionType:type,//  加入：join；  退出：signout
 				asActId:vm_activity_detail.courseInfo.actId,
 				asGradeId:userInfo.studentsDetail.stdGrade,
 				asClassId:userInfo.studentsDetail.stdClass,
 				asTcId:vm_activity_detail.courseInfo.actTcId
 			}
-		if(vm_activity_detail.courseInfo.asId==undefined || vm_activity_detail.courseInfo.asId==0 ){
-			data.actionType="join";
-		}else{
+		if(vm_activity_detail.courseInfo.hasPart==1 ){
 			data.actionType="signout" ;
+		}else{
+			data.actionType="join";
 		}
 		
 		app.postActivityDetailJoin(data,function(data){
