--- a/school/courseDetails.html
+++ b/school/courseDetails.html
@@ -23,10 +23,10 @@
 	
 	<div id="course_detail_content" class="mui-content">
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 			<img src="../images/head-dz.png" class="head-dz"/>
 			<h1 class="mui-title">{{title}}</h1>
-			<a class="mui-icon mui-icon-forward mui-pull-right"></a>
+			<!--<a class="mui-icon mui-icon-forward mui-pull-right"></a>-->
 		</header>
 
 		<ul id="list" class="course-detail-ui" >
@@ -37,7 +37,7 @@
 					<p class="content-desc">{{item.chapDesc}}</p> 
 				</div>
 			</li>
-			<!--<li>				
+			<!--<li>
 				<div class="content-div">
 					<div class="content-title">2、艺术照赏析</div>
 					<img class="content-img" src="../images/bigicon4.png"> 
