--- a/school/selectCourse.html
+++ b/school/selectCourse.html
@@ -100,7 +100,8 @@
 //						"deleteTime": 1500283184000,
 //						"tcStartTime": 1500739200000,
 //						"tcEndTime": 1506614400000,
-//						"hasJoin": "0"
+//						"hasJoin": "0",
+//                      "hasTsId":"0"
 //						}
 			]
 				
@@ -160,7 +161,7 @@
 			data={
 				manageId:userInfo.manageId,
 				actionType:"signout", //  加入：join；  退出：signout
-				tsId:classInfo.tcId 
+				tsId:classInfo.hasTsId 
 			}
 		}
 		
